# dts_to_uff_converter

./: AGENTS.md  Cargo.toml  README.md  inspector.mcp.json
Bancairon_G1_training6_small/: Bancairon_G1_training6.0.chn  Bancairon_G1_training6.1.chn  Bancairon_G1_training6.dts  matlab_converted.uff
matlab/: DTS.m  DTS_to_uff.m  writeuff58DX.m
src/: conversion.rs  dts.rs  lib.rs  main.rs  uff.rs
tests/: dts_metadata.rs  matlab_comparison.rs
