[package]
name = "dts_to_uff_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
byteorder = "1.5"
quick-xml = { version = "0.31" }
natord = "1.0"
indicatif = "0.17"
anyhow = "1.0"
encoding_rs = "0.8"
rayon = "1.8"
rust-mcp-sdk = { version = "0.7.2", default-features = false, features = ["server", "macros", "stdio", "2025_06_18"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
